# parse-sap-odata-demo

./: .gitignore  Cargo.toml  README.md  build.rs  pretty_xml.sh
odata/: businessPartnerNetwork_PublicApiBusinessPartnerService.xml  gwsample_basic.xml  publicApi_DigitalTwinService.xml  service_ProjectPartnerServiceV2.xml  service_ProjectServiceV2.xml
src/: auth.rs  html.rs  main.rs  odata_services.rs  unit_tests.rs
src/err_handlers/: mod.rs
test_data/: BusinessPartnerSet.xml  ContactSet.xml  ProductSet.xml  SalesOrderLineItemSet.xml  SalesOrderSet.xml  VH_AddressTypeSet.xml  VH_BPRoleSet.xml  VH_CategorySet.xml  VH_CountrySet.xml  VH_CurrencySet.xml  VH_LanguageSet.xml  VH_ProductTypeCodeSet.xml  VH_SexSet.xml  VH_UnitLengthSet.xml  VH_UnitQuantitySet.xml  VH_UnitWeightSet.xml
