[package]
name = "parse-sap-odata-demo"
edition = "2021"
version = "0.1.9"
authors = ["Chris Whealy <chris@whealy.com>"]
description = "Minimal demo app that consumes the SAP OData service GWSAMPLE_BASIC"
keywords = ["odata", "sap", "parser", "opendata", "gwsample_basic"]
repository = "https://github.com/ChrisWhealy/parse-sap-odata-demo"
license = "MIT"

[build-dependencies]
#parse-sap-odata = { version = "1.4", features = ["parser"]}
parse-sap-odata = { path = "../parse-sap-odata", features = ["parser"]}

[dependencies]
# parse-sap-odata's fixed dependencies
serde = { version = "1.0", features = ["derive"] }
quick-xml = "0.36"

# parse-sap-odata's possible dependencies (varies depending on which EDM properties are encountered)
chrono = { version = "0.4", features = ["serde"]}
rust_decimal = "1.36"
uuid = { version = "1.10", features = ["serde"]}

actix-web = "4.9"
base64 = "0.22"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json"]}

parse-sap-odata = { path = "../parse-sap-odata"}
#parse-sap-odata = "1.4"
#parse-sap-atom-feed = { path = "../parse-sap-atom-feed" }
parse-sap-atom-feed = "1.2"

serde_json = "1.0"
tinytemplate = "1.2"
