[package]
name = "parse-sap-odata-demo"
edition = "2024"
version = "0.2.1"
authors = ["Chris Whealy <chris@whealy.com>"]
description = "Demo app that consumes OData V2 services from SAP's API sandbox"
keywords = ["odata", "sap", "parser", "opendata", "api"]
repository = "https://github.com/ChrisWhealy/parse-sap-odata-demo"
license = "MIT"

[build-dependencies]
parse-sap-odata = { version = "1.6", features = ["parser"]}
#parse-sap-odata = { path = "../parse-sap-odata", features = ["parser"]}

[dependencies]
parse-sap-odata = { version = "1.6", features = ["parser"]}
#parse-sap-odata = { path = "../parse-sap-odata", features = ["parser"]}
parse-sap-atom-feed = "1.3"
#parse-sap-atom-feed = { path = "../parse-sap-atom-feed" }

# parse-sap-odata's fixed dependencies
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.39", features = ["overlapped-lists", "serialize"] }

# parse-sap-odata's possible dependencies (varies depending on which EDM properties are encountered)
chrono = { version = "0.4", features = ["serde"]}
rust_decimal = "1.40"
uuid = { version = "1.22", features = ["serde"]}

actix-web = "4.13"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.13", features = ["json"]}
serde_json = "1.0"
